--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Tamunotonye Briggs <t.briggs1@alustudent.com>
+makuochi okoye <makuochiokoye@gmail.com>
